examples/datalog/18_advanced_patterns/51_path_counting_weighted.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_weighted
Knowledge graph 'test_weighted' created.
Switched to knowledge graph: test_weighted
> .kg use test_weighted
Switched to knowledge graph: test_weighted
> +edge[(1, 2, 10), (2, 3, 20), (1, 3, 50), (3, 4, 15)].
Inserted 4 fact(s) into 'edge'.
> +path_cost(A, B, C) :- edge(A, B, C).
Rule 'path_cost' registered.
> +path_cost(A, C, TotalCost) :- path_cost(A, B, C1), edge(B, C, C2), TotalCost = C1 + C2, TotalCost < 100.
Script error: Failed to register rule: Unsafe rule 'path_cost': Head variable(s) TotalCost not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
