examples/datalog/18_advanced_patterns/51_path_counting_weighted.dl
% Test: Weighted path pattern
% Expected: Compute path costs
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_weighted
.kg use test_weighted

+edge[(1, 2, 10), (2, 3, 20), (1, 3, 50), (3, 4, 15)].

% Direct paths with cost
+path_cost(A, B, C) :- edge(A, B, C).

% Extended paths
+path_cost(A, C, TotalCost) :- path_cost(A, B, C1), edge(B, C, C2), TotalCost = C1 + C2, TotalCost < 100.

?- path_cost(1, Dest, Cost).

.kg use default
.kg drop test_weighted
